Name:               jasminv
Version:            0.0.1
Description:        Jasmin Verification Tool
License:            GPL
License-file:       COPYING
Author:             Cryptography and Information Security Group, HASLab - INESC TEC and Universidade do Minho
Maintainer:         Hugo Pacheco <hpacheco@gmail.com>
Bug-reports:        mailto:hpacheco@gmail.com
Stability:          experimental
Homepage:           
Category:           Compiler, Cryptography, Language
Build-Type:         Simple
Cabal-Version:      >=1.6
Tested-with:        GHC==8
Synopsis:           Jasmin Verifier

Extra-Source-Files: README.md examples tests
Data-files: imports/*.dfy

Executable jasminv
  Main-is:          Main.hs
  Other-Modules:
                        Language.Jasmin.Parser.Lexer
  Hs-source-dirs:   src
  Build-Depends:    timeit, largeword, sbv, posix-escape, filepath, process, split, text, shelly, containers, cmdargs, base, mtl, transformers, safe, digits, binary, bytestring, syb, array, hashable, parsec, parsec-numbers, pretty, deepseq, deepseq-generics, linguistic-ordinals >= 0.1.0.1
  Build-Tools:      alex

Library
  exposed-modules:
                        Language.Jasmin.Parser.Parser
                        Language.Jasmin.Parser.Tokens
                        Language.Jasmin.Syntax
                        Language.Vars
                        Language.Jasmin.IO
                        Language.Jasmin.TypeChecker.TyInfo
                        Language.Jasmin.TypeChecker
                        Language.Jasmin.Transformation.Dafny
                        Language.Jasmin.Transformation.Simplify
                        Language.Jasmin.Transformation.VCGen
                        Language.Jasmin.Transformation.SBV
                        Language.Location
                        Language.Position
                        Text.Parsec.Exts
                        Text.PrettyPrint.Exts
                        Options
                        Utils
                        Data.Hashable.Exts
                        Data.SBV.Exts
  Other-Modules:
                        Language.Jasmin.Parser.Lexer
                        Paths_jasminv
  Hs-Source-Dirs: src
  Build-Depends:    timeit, largeword, sbv, posix-escape, filepath, process, split, text, shelly, containers, cmdargs, base, mtl, transformers, safe, digits, binary, bytestring, syb, array, hashable, parsec, parsec-numbers, pretty, deepseq, deepseq-generics, linguistic-ordinals >= 0.1.0.1
  Build-Tools:      alex

test-suite tests
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      tests
  main-is:
      Tests.hs
  build-depends:
      base
    , HUnit
    , filemanip
    , hspec   
    , hspec-contrib
    , hspec-core

